[workspace]
members = ["transaction-view"]

resolver = "2"

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/agave-sdk"
homepage = "https://anza.xyz"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.89.0"

# Clippy lint configuration that can not be applied in clippy.toml
[workspace.lints.clippy]
# Denied lints
arithmetic_side_effects = "deny"
default_trait_access = "deny"
manual_let_else = "deny"
uninlined_format_args = "deny"
used_underscore_binding = "deny"

# Allowed lints
new_without_default = "allow"

[workspace.dependencies]
bytes = "1.12.1"
criterion = "0.8.2"
solana-hash = "4.5.0"
solana-instruction = "3.4.0"
solana-keypair = "3.1.2"
solana-message = "4.3.0"
solana-packet = "4.2.0"
solana-pubkey = { version = "4.2.0", default-features = false }
solana-sdk-ids = "3.1.0"
solana-short-vec = "3.2.2"
solana-signature = { version = "3.4.1", default-features = false }
solana-signer = "3.0.1"
solana-svm-transaction = "4.2.0"
solana-system-interface = { version = "3.2", features = ["alloc", "wincode"] }
solana-transaction = "4.1.5"
wincode = { version = "0.5.5", features = ["derive"] }

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

# Enable basic optimizations for unittests
[profile.test]
opt-level = 1

# Enable optimizations for procmacros for faster recompile
[profile.dev.build-override]
opt-level = 1
