[package]
name = "agave-scheduler-bindings"
description = "Agave scheduler-binding message types for external pack process integration"
documentation = "https://docs.rs/agave-scheduler-bindings"
version = "5.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]

[lints]
workspace = true
