[package]
name = "agave-transaction-view"
description = "Agave TranactionView"
documentation = "https://docs.rs/agave-transaction-view"
version = "4.3.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]

[dependencies]
solana-hash = { workspace = true }
solana-message = { workspace = true }
solana-packet = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-short-vec = { workspace = true }
solana-signature = { workspace = true }
solana-svm-transaction = { workspace = true }
solana-transaction = { workspace = true }

[dev-dependencies]
# See order-crates-for-publishing.py for using this unusual `path = "."`
agave-transaction-view = { path = "." }
bincode = { workspace = true }
criterion = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true, features = ["serde"] }
solana-pubkey = { workspace = true, features = ["rand"] }
solana-signature = { workspace = true, features = ["serde"] }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true, features = ["wincode"] }
solana-transaction = { workspace = true, features = ["serde", "wincode"] }
wincode = { workspace = true }

[[bench]]
name = "transaction_view"
harness = false

[lints]
workspace = true
