[package]
name = "agave-transaction-view"
description = "Agave TranactionView"
documentation = "https://docs.rs/agave-transaction-view"
version = "5.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]

[dependencies]
bytes = { workspace = true }
solana-hash = { workspace = true }
solana-message = { workspace = true }
solana-packet = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-short-vec = { workspace = true, features = ["wincode"] }
solana-signature = { workspace = true }
solana-svm-transaction = { workspace = true }
solana-transaction = { workspace = true }

[dev-dependencies]
# See order-crates-for-publishing.py for using this unusual `path = "."`
agave-transaction-view = { path = "." }
criterion = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true, features = ["rand"] }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true, features = ["wincode"] }
solana-transaction = { workspace = true, features = ["wincode"] }
wincode = { workspace = true }

[[bench]]
name = "transaction_view"
harness = false

[lints]
workspace = true
